tests/negative/neg_try_send_success_overwrite.safe
-- Test: neg_try_send_success_overwrite
-- Description: Access-typed channel elements are rejected before try_send success-refinement checks run.
-- Expected: REJECT source_frontend_error

package neg_try_send_success_overwrite

   type payload is record
      value : integer;


   type payload_ptr is access payload;

   channel data_ch : payload_ptr capacity 1;

   function run
      Source  : payload_ptr = new ((value = 1) as payload);
      success : boolean = false;

      try_send data_ch, Source, success;
      success = false;
      Source = new ((value = 2) as payload);



